Fix overlay on mobile

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ h1 {
     background: #6d6c6c;
     opacity: 0.3;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     left:0px;
 }
 
